# mkt_model

./: .gitignore  CMakeLists.txt  MaterialDot.cpp  MaterialDot.hpp  README.md  main.cpp
Tests/: MaterialDot-test.cpp  tester-main.cpp
